# pet-project-for-yandex

./: .env.example  .env.local  .env.test  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 80fbe11c6e73_add_users.py
src/: main.py
src/auth/: dependencies.py  router.py  schemas.py  service.py
src/core/: config.py
src/db/: session.py
src/users/: models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_user_repo.py  test_user_service.py
