[tool.poetry]
package-mode = true

packages = [
    { include = "src" }
]

[project]
name = "pet-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Golub",email = "gosest4@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "passlib (==1.7.4)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "requests (>=2.32.5,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "greenlet (>=3.3.1,<4.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "bcrypt (==4.0.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
